# Portfolio-SalesAgent

./: .env.example  README.md  agent_setup.py  config.py  email_logger.py  email_service.py  email_workflow.py  guardrails.py  interface.py  logger_config.py  mail_merge.py  models.py  prompts.py  pyproject.toml  sales_manager.py  scoring.py
