[project]
name = "portfolio-salesagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "gradio>=6.8.0",
    "openai>=2.24.0",
    "openai-agents>=0.10.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.0.0",
    "sendgrid>=6.12.5",
]
